# esp32-birdnet-streamer

./: .gitignore  AGENTS.md  PACKET_FORMAT.md  README.md  platformio.ini
.github/workflows/: docker-publish.yml
docs/: diagnostic-led-tests.md  power-monitor-circuit.md  power-monitor.net  version2.vrt
listener/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  docker-compose.yml.host  pyproject.toml
listener/.github/workflows/: docker-publish.yml
listener/src/birdnet_listener/: audio_normalizer.py  discovery.py  main.py  mqtt_ha.py  noise_reducer.py  ogg_opus_stream.py  udp_receiver.py
src/: main.cpp
